aggiunti grafici e possibilità di filtrare le transazioni in base all'anno